...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignExercise">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="559dp"
        android:ems="10"
        android:hint="Enter Date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectanexercise" />

    <Spinner
        android:id="@+id/exercisedropdown"
        style="@style/spinner_style"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="79dp"
...
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toStartOf="@+id/exercisedropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/athlete"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoteBox" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
...
