...
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="Create a new exercise" />

            <EditText
                android:id="@+id/ExerciseNameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
...
            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:text="Confirm" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
